--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^3.19.5",
+    "@zeit/next-css": "^1.0.1",
     "next": "13.0.1",
+    "next-remove-imports": "^1.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -17,8 +20,11 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
