--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "13.0.1",
     "next-remove-imports": "^1.0.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-switch": "^7.0.0",
+    "react-toggle": "^4.1.3",
+    "react-toggle-button": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
