--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "^3.19.5",
+    "@vercel/analytics": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "next": "13.0.1",
     "next-remove-imports": "^1.0.8",
